css/style.css
/* ... */
.card:not(:last-child) {
  margin-bottom: 20px;
}

.card:last-child {
  margin-bottom: 0;
}

.project-title {
  display: inline-block;
  text-decoration-line: underline;
  text-decoration-thickness: 2px;
}

.project-figure img {
  transform: none;
  transition: all 0.125s ease-in-out;
}

.project-figure img:hover {
  transform: scale(1.05);
  cursor: pointer;
}

.modal-container {
  display: none;
  /* Hidden by default */
  position: fixed;
  /* Stay in place */
  z-index: 2;
  /* Sit on top */
  left: 0;
  top: 0;
  width: 100%;
  /* Full width */
  height: 100%;
  /* Full height */
  overflow: auto;
  /* Enable scroll if needed */
  background-color: rgba(0, 0, 0, 0.9);
  /* Black w/ opacity */
}

/* Modal Content (Image) */
.modal-content {
  position: fixed;
  /* center the element */
  right: 0;
  left: 0;
  margin: auto;
  top: 20%;
  bottom: 20%;
  width: 100%;
  max-width: 1000px;
  border-radius: 10px;
}

/* Add Animation - Zoom in the Modal */
.modal-content {
  -webkit-animation-name: zoom;
  -webkit-animation-duration: 0.25s;
  animation-name: zoom;
  animation-duration: 0.25s;
  transition: width 0.25s ease-in-out;
}

@-webkit-keyframes zoom {
  from {
    -webkit-transform: scale(0)
  }

  to {
    -webkit-transform: scale(1)
  }
}

@keyframes zoom {
  from {
    transform: scale(0)
  }

  to {
    transform: scale(1)
  }
}

/* The Close Button */
.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px !important;
  font-weight: bold;
  transition: 0.3s;
}

.close:hover,
.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

.video-container {
  --width: 75%;
  display: flex;
  position: relative;
  width: var(--width);
  margin-left: calc((100% - var(--width)) / 2);
  height: 0;
  padding-bottom: calc(var(--width) / 16 * 9);
}

.video {
  position: absolute;
  width: 100%;
  height: 100%;
}

.attribution-section {
  display: flex;
  flex-direction: column;
  text-align: center;
  width: max-content;
  margin-left: auto;
  margin-right: auto;
}

.attribution-section a {
  font-size: 10px;
  color: var(--light-gray-70);
  width: max-content;
  align-self: center;
  padding: 0;
}

/**
 * skills 
 */

.skills-item {
  margin-bottom: 25px;
}

.skills-title {
  margin-bottom: 20px;
}

.skills-list {
  padding-left: 20px;
}

.skills-item {
  margin-bottom: 15px;

}

.skill .title-wrapper {
  gap: 5px;
  margin-top: 8px;
}

.skill .skills-item:not(:first-child) .title-wrapper {
  margin-top: 20px;
}

.instagram-media {
  margin-left: auto !important;
  margin-right: auto !important;
  width: 100%;
  max-width: 400px;
  aspect-ratio: 4 / 5;
}


.top-placeholder {
  height: 208px;
}

/*-----------------------------------*\
  #RESPONSIVE
\*-----------------------------------*/

/**
 * responsive larger than 580px screen
 */

@media (min-width: 580px) {

  .avatar {
    height: 120px;
    width: 120px;
    border-radius: 30px;
  }

  /**
   * CUSTOM PROPERTY
   */

  :root {

    /**
     * typography
     */

    --fs-1: 32px;
    --fs-2: 24px;
    --fs-3: 26px;
    --fs-4: 18px;
    --fs-6: 15px;
    --fs-7: 15px;
    --fs-8: 12px;

  }



  /**
   * #REUSED STYLE
   */

  .sidebar,
  article {
    width: 520px;
    height: min-content;
    margin-inline: auto;
    padding: 30px;
  }

  .article-title {
    font-weight: var(--fw-title);
    padding-bottom: 15px;
  }

  .article-title::after {
    width: 40px;
    height: 5px;
  }

  .icon-box {
    width: 48px;
    height: 48px;
    border-radius: 12px;
    font-size: 18px;
  }



  /**
   * #MAIN
   */

  body {
    margin-top: 60px;
    margin-bottom: 100px;
  }



  /**
   * #SIDEBAR
   */

  .sidebar {
    max-height: 180px;
    margin-bottom: 30px;
  }

  .sidebar.active {
    max-height: 584px;
  }

  .sidebar-info {
    gap: 25px;
  }

  .info-content .name {
    margin-bottom: 15px;
  }

  .info-content .title {
    padding: 5px 18px;
  }

  .info_more-btn {
    top: -30px;
    right: -30px;
    padding: 10px 15px;
  }

  .info_more-btn span {
    display: block;
    font-size: var(--fs-8);
  }

  .info_more-btn ion-icon {
    display: none;
  }

  .separator {
    margin: 32px 0;
  }

  .contacts-list {
    gap: 20px;
  }

  .contact-info {
    max-width: calc(100% - 64px);
    width: calc(100% - 64px);
  }



  /**
   * #NAVBAR
   */

  .navbar {
    border-radius: 20px 20px 0 0;
  }

  .navbar-list {
    gap: 20px;
  }

  .navbar-link {
    --fs-8: 14px;
  }


  /**
   * #ABOUT
   */

  .about .article-title {
    margin-bottom: 20px;
  }


  /**
   * #PORTFOLIO, BLOG
   */

  .project-img,
  .blog-banner-box {
    border-radius: 16px;
  }

  .blog-posts-list {
    gap: 30px;
  }

  .blog-content {
    padding: 25px;
  }

}





/**
 * responsive larger than 768px screen
 */

@media (min-width: 768px) {

  /**
   * REUSED STYLE
   */

  article {
    width: 700px;
  }

  .has-scrollbar::-webkit-scrollbar-button {
    width: 100px;
  }

  /**
   * SIDEBAR
   */

  .contacts-list {
    grid-template-columns: 1fr 1fr;
    gap: 30px 15px;
  }



  /**
   * NAVBAR
   */

  .navbar-link {
    --fs-8: 15px;
  }

  /**
   * CONTACT
   */

  .input-wrapper {
    grid-template-columns: 1fr 1fr;
  }

}
/* ... */

